build(deps): bump jacoco-maven-plugin from 0.8.8 to 0.8.10 (#1203)
* build(deps): bump jacoco-maven-plugin from 0.8.8 to 0.8.10
* add opens for jdk16+ on surefire